--- a/hack/provider/provider.yaml
+++ b/hack/provider/provider.yaml
@@ -22,7 +22,7 @@ options:
     default: c2-standard-4
   INACTIVITY_TIMEOUT:
     description: If defined, will automatically stop the VM after the inactivity period.
-    default: 10m
+    default: 5m
   INJECT_GIT_CREDENTIALS:
     description: "If DevPod should inject git credentials into the remote host."
     default: "true"
@@ -56,7 +56,7 @@ agent:
         checksum: ##CHECKSUM_LINUX_ARM64##
   exec:
     shutdown: |-
-      ${GCLOUD_PROVIDER} stop
+      ${GCLOUD_PROVIDER} stop --raw
 binaries:
   GCLOUD_PROVIDER:
     - os: linux
