fix: default project

--- a/hack/provider/provider.yaml
+++ b/hack/provider/provider.yaml
@@ -19,11 +19,11 @@ options:
   PROJECT:
     description: The project id to use.
     required: true
-    command: gcloud config list --quiet --verbosity=error --format "value(core.project)" || true
+    command: gcloud config list --quiet --verbosity=error --format "value(core.project)" 2>/dev/null || true
   ZONE:
     description: The google cloud zone to create the VM in. E.g. europe-west1-d
     required: true
-    command: gcloud config list --quiet --verbosity=error --format "value(compute.zone)" || true
+    command: gcloud config list --quiet --verbosity=error --format "value(compute.zone)" 2>/dev/null || true
     suggestions:
       - asia-east1-a
       - asia-east1-b
