--- a/hack/provider/provider.yaml
+++ b/hack/provider/provider.yaml
@@ -26,7 +26,7 @@ options:
     command: |-
       GCLOUD_ZONE=$(gcloud config list --quiet --verbosity=error --format "value(compute.zone)" 2>/dev/null || true)
       if [ -z "$GCLOUD_ZONE" ]; then
-        echo "echo "europe-west2-b"
+        echo "europe-west2-b"
       else
         echo $GCLOUD_ZONE
       fi
