--- a/hack/provider/provider.yaml
+++ b/hack/provider/provider.yaml
@@ -113,7 +113,7 @@ options:
     default: projects/cos-cloud/global/images/cos-101-17162-127-5
   SERVICE_ACCOUNT:
     description: A service account to attach
-    default: "none"
+    default: ""
   MACHINE_TYPE:
     description: The machine type to use.
     default: c2-standard-4
